--- a/components/resume/resume.html
+++ b/components/resume/resume.html
@@ -46,7 +46,7 @@
         </div>
     </header>  
     
-    <h1>Check out some of my previous experience (I think it's pretty cool):</h1>  
+    <h1 class="text-center">Check out  my previous experience (it's cool, I promise):</h1>  
     
     <p></p>
 </body>
