--- a/components/resume/resume.html
+++ b/components/resume/resume.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Alex Le Blanc - About Me</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="resume.css">
 </head>
+
 <body>
-  <header>
+    <header>
         <div class="myNavbar">
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
@@ -44,10 +47,81 @@
             <h4 class="subName">-Eleanor Roosevelt</h4>
         </div>
         </div>
-    </header>  
-    
-    <h1 class="text-center">Check out  my previous experience (it's cool, I promise):</h1>  
-    
+    </header>
+
+    <main class="container">
+        
+        <h1 class="text-center underline"><u>I Got Skills.</u></h1>
+            <div class="row">
+                
+            </div>
+
+        <h1 class="text-center"><u>Check out  my previous experience (it's cool, I promise):</u></h1>
+
+        <div class="row greyScale separator">
+            <div class="col-xs-4">
+                <a href="http://www.backcountry.com"><img src="backcountryLogo.png" class="img-responsive center-block BCCompanyLogo"></a>
+            </div>
+            <div class="col-xs-8">
+               <h3>Inbound Chat Gearhead</h3> 
+               <h5>(Oct 2015 - Apr 2016)</h5>
+                <ul>
+                    <li>Answered inbound chat inquiries from customers.</li>
+                    <li>Provided customer support, resolved problems, answered questions.</li>
+                    <li>Facilitated sales of outdoor gear.</li>
+                </ul>
+                <h3>Customer Account Manager </h3> 
+                <h5>(Apr 2016 - Dec 2016)</h5>
+                <ul>
+                    <li>Sales</li>
+                    <li>Managed a client book of 2,000 customers and provided each with personalized service.</li>
+                    <li>Performed 65 outbound calls a day split between existing and potential new customers.</li>
+                </ul>
+            </div>
+        </div>  
+        <br>
+        <div class="row greyScale separator">
+            <div class="col-xs-4">
+                <a href="http://www.momentumclimbing.com"><img src="momentumM.jpg" class="img-responsive center-block MCCompanyLogo"></a>
+            </div>
+            <div class="col-xs-8">
+               <h3>Front Desk Employee</h3> 
+               <h5>(Apr 2015 - Oct 2016)</h5>
+                <ul>
+                    <li>Customer service: answered questions, phones, toured the gym to new customers.</li>
+                    <li>Sales: sold memberships once customers had the chance to experience our service.</li>
+                    <li>Monitored the floor for safety issues and taught lessons on belaying/climbing.</li>
+                </ul>
+            </div>
+        </div>  
+        <br>
+        <div class="row greyScale separator">
+            <div class="col-xs-4">
+                <a href="http://www.westminstercollege.edu"><img src="westminsterLogo.png" class="img-responsive center-block WCCompanyLogo"></a>
+            </div>
+            <div class="col-xs-8">
+               <h3>Head Routesetter (Outdoor Recreation)</h3> 
+               <h5>(August 2014 - Apr 2016)</h5>
+                <ul>
+                    <li>Oversaw routesetting proceedures for Bishop Climbing Wall.</li>
+                    <li>Set, graded, and maintained climbs currently at the wall. Wall maintenance.</li>
+                    <li>Oversaw other setters and organized guest setters.</li>
+                    <li>Helped plan and execute bi-annual climbing comps.</li>
+                </ul>
+                <h3>ICC Board Member and Club President</h3> 
+                <h5>(Jan 2015 - Dec 2015)</h5>
+                <ul>
+                    <li>Helped governed the Inner-Club Council as a board member.</li>
+                    <li>President of Climbing Club and Ultimate Frisbee Club: 150 and 30 members respectively.</li>
+                    <li>Managed a budget for two separate campus organizations.</li>
+                    <li>Performed 65 outbound calls a day split between existing and potential new customers.</li>
+                </ul>
+            </div>
+        </div>      
+
+    </main>
+
     <p></p>
 </body>
+
 </html>
