--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,11 @@
     border-left: 2px solid aquamarine;
 }
 
+.logoImage {
+    height: 40px;
+    width: 40px;
+}
+
 .name{
     text-transform: uppercase;
     color: white;
