--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,12 @@
     box-sizing: border-box;
 }
 
+/*
 .myNavbar {
     margin-bottom: -113px;
-/*    padding-top: 15px;*/
+    padding-top: 15px;
 }
+*/
 
 .navbar-default {
     background-color: transparent;
@@ -40,12 +42,19 @@
     width: 60px;
 }
 
+.my-title {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
 .name{
     text-transform: uppercase;
     color: white;
     font-size: 4em;
     display: inline-block;
-    margin-top: 40vh;
+/*    margin-top: 40vh;*/
     border-bottom: 3px solid white;
 }
 
@@ -65,6 +74,7 @@
     top: 0;
     background-size: cover;
     height: 100vh;
+    position: relative;
 }
 
 .darken {
@@ -74,6 +84,7 @@
 .shortBio {
     font-size: 3em;
     text-decoration: underline;
+    margin-top: 40px;;
 }
 
 .shortBioText {
