--- a/components/aboutMe/aboutMe.html
+++ b/components/aboutMe/aboutMe.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -9,47 +10,62 @@
     <link rel="stylesheet" href="aboutMe.css">
     <link rel="shortcut icon" href="favicon-32x32-copy.png">
 </head>
-<body>
-  <header>
-        <div class="myNavbar">
-            <nav class="navbar navbar-default">
-                <div class="container-fluid">
-                    <!--Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="/index.html">ADL</a>
-                    </div>
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            <li><a href="../aboutMe/aboutMe.html">About Me</a></li>
-                            <li><a href="../resume/resume.html">Resume</a></li>
-                        </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#">My Projects</a></li>
-                            <li><a href="../contact/contact.html">Contact Me</a></li>
-                        </ul>
-                    </div>
-                    <!-- /.navbar-collapse -->
-                </div>
-                <!-- /.container-fluid -->
-            </nav>
-        </div>
-        <div class="col-xs-12 text-center module darken">
 
-            <h1 class="quote">"The future belongs to those who believe in the beauty of their dreams."</h1>
-            <h4 class="subName">-Eleanor Roosevelt</h4>
+<body>
+    <header class="container-fluid">
+        <div class="row">
+            <!--       <a class="navbar-brand text-center" href="index.html"><img src="ADLlogoWhite.png" class="img-responsive logoImage"></a>-->
+
+            <div class="col-xs-12 text-center module darken">
+
+
+                <div class="myNavbar">
+                    <nav class="navbar navbar-default">
+                        <div>
+                            <!--Brand and toggle get grouped for better mobile display -->
+
+
+                            <div class="navbar-header">
+                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </button>
+                                <a class="navbar-brand" href="../../index.html"><img src="ADLlogoWhite-copy.png" class="img-responsive logoImage"></a>
+                            </div>
+
+
+                            <!-- Collect the nav links, forms, and other content for toggling -->
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                <ul class="nav navbar-nav navbar-right">
+                                    <li><a href="../aboutMe/aboutMe.html">About Me</a></li>
+                                    <li><a href="../resume/resume.html">Resume</a></li>
+                                    <li><a href="#">My Projects</a></li>
+                                    <li><a href="../contact/contact.html">Contact Me</a></li>
+                                </ul>
+                            </div>
+                            <!-- /.navbar-collapse -->
+                        </div>
+                        <!-- /.container-fluid -->
+                    </nav>
+                </div>
+
+                <div class="my-title">
+
+                    <h1 class="quote">"The future belongs to those who believe in the beauty of their dreams."</h1>
+                    <h4 class="subName"><u>-Eleanor Roosevelt</u></h4>
+                </div>
+            </div>
         </div>
-        </div>
-    </header>  
-    
-    <h1>A little bit more about me...</h1>  
-    
-    <p></p>
+    </header>
+
+    <main class="container">
+
+        <h1>A little bit more about me...</h1>
+
+        <p></p>
+    </main>
 </body>
+
 </html>
