--- a/components/resume/resume.html
+++ b/components/resume/resume.html
@@ -12,50 +12,59 @@
 </head>
 
 <body>
-    <header>
-        <div class="myNavbar">
-            <nav class="navbar navbar-default">
-                <div class="container-fluid">
-                    <!--Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="/index.html">ADL</a>
-                    </div>
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            <li><a href="../aboutMe/aboutMe.html">About Me</a></li>
-                            <li><a href="../resume/resume.html">Resume</a></li>
-                        </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#">My Projects</a></li>
-                            <li><a href="../contact/contact.html">Contact Me</a></li>
-                        </ul>
-                    </div>
-                    <!-- /.navbar-collapse -->
-                </div>
-                <!-- /.container-fluid -->
-            </nav>
-        </div>
-        <div class="col-xs-12 text-center module darken">
+    <header class="container-fluid">
+        <div class="row">
+            <!--       <a class="navbar-brand text-center" href="index.html"><img src="ADLlogoWhite.png" class="img-responsive logoImage"></a>-->
 
-            <h1 class="quote">"The future belongs to those who believe in the beauty of their dreams."</h1>
-            <h4 class="subName">-Eleanor Roosevelt</h4>
-        </div>
+            <div class="col-xs-12 text-center module darken">
+
+
+                <div class="myNavbar">
+                    <nav class="navbar navbar-default">
+                        <div>
+                            <!--Brand and toggle get grouped for better mobile display -->
+
+
+                            <div class="navbar-header">
+                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </button>
+                                <a class="navbar-brand" href="../../index.html"><img src="ADLlogoWhite-copy.png" class="img-responsive logoImage"></a>
+                            </div>
+
+
+                            <!-- Collect the nav links, forms, and other content for toggling -->
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                <ul class="nav navbar-nav navbar-right">
+                                    <li><a href="../aboutMe/aboutMe.html">About Me</a></li>
+                                    <li><a href="../resume/resume.html">Resume</a></li>
+                                    <li><a href="#">My Projects</a></li>
+                                    <li><a href="../contact/contact.html">Contact Me</a></li>
+                                </ul>
+                            </div>
+                            <!-- /.navbar-collapse -->
+                        </div>
+                        <!-- /.container-fluid -->
+                    </nav>
+                </div>
+
+                <div class="my-title">
+                    <h1 class="quote">"The future belongs to those who believe in the beauty of their dreams."</h1>
+                    <h4 class="subName"><u>-Eleanor Roosevelt</u></h4>
+                </div>
+            </div>
         </div>
     </header>
 
     <main class="container">
-        
+
         <h1 class="text-center underline"><u>I Got Skills.</u></h1>
-            <div class="row">
-                
-            </div>
+        <div class="row">
+
+        </div>
 
         <h1 class="text-center"><u>Check out  my previous experience (it's cool, I promise):</u></h1>
 
@@ -64,14 +73,14 @@
                 <a href="http://www.backcountry.com"><img src="backcountryLogo.png" class="img-responsive center-block BCCompanyLogo"></a>
             </div>
             <div class="col-xs-8">
-               <h3>Inbound Chat Gearhead</h3> 
-               <h5>(Oct 2015 - Apr 2016)</h5>
+                <h3>Inbound Chat Gearhead</h3>
+                <h5>(Oct 2015 - Apr 2016)</h5>
                 <ul>
                     <li>Answered inbound chat inquiries from customers.</li>
                     <li>Provided customer support, resolved problems, answered questions.</li>
                     <li>Facilitated sales of outdoor gear.</li>
                 </ul>
-                <h3>Customer Account Manager </h3> 
+                <h3>Customer Account Manager </h3>
                 <h5>(Apr 2016 - Dec 2016)</h5>
                 <ul>
                     <li>Sales</li>
@@ -79,37 +88,37 @@
                     <li>Performed 65 outbound calls a day split between existing and potential new customers.</li>
                 </ul>
             </div>
-        </div>  
+        </div>
         <br>
         <div class="row greyScale separator">
             <div class="col-xs-4">
                 <a href="http://www.momentumclimbing.com"><img src="momentumM.jpg" class="img-responsive center-block MCCompanyLogo"></a>
             </div>
             <div class="col-xs-8">
-               <h3>Front Desk Employee</h3> 
-               <h5>(Apr 2015 - Oct 2016)</h5>
+                <h3>Front Desk Employee</h3>
+                <h5>(Apr 2015 - Oct 2016)</h5>
                 <ul>
                     <li>Customer service: answered questions, phones, toured the gym to new customers.</li>
                     <li>Sales: sold memberships once customers had the chance to experience our service.</li>
                     <li>Monitored the floor for safety issues and taught lessons on belaying/climbing.</li>
                 </ul>
             </div>
-        </div>  
+        </div>
         <br>
         <div class="row greyScale separator">
             <div class="col-xs-4">
                 <a href="http://www.westminstercollege.edu"><img src="westminsterLogo.png" class="img-responsive center-block WCCompanyLogo"></a>
             </div>
             <div class="col-xs-8">
-               <h3>Head Routesetter (Outdoor Recreation)</h3> 
-               <h5>(August 2014 - Apr 2016)</h5>
+                <h3>Head Routesetter (Outdoor Recreation)</h3>
+                <h5>(August 2014 - Apr 2016)</h5>
                 <ul>
                     <li>Oversaw routesetting proceedures for Bishop Climbing Wall.</li>
                     <li>Set, graded, and maintained climbs currently at the wall. Wall maintenance.</li>
                     <li>Oversaw other setters and organized guest setters.</li>
                     <li>Helped plan and execute bi-annual climbing comps.</li>
                 </ul>
-                <h3>ICC Board Member and Club President</h3> 
+                <h3>ICC Board Member and Club President</h3>
                 <h5>(Jan 2015 - Dec 2015)</h5>
                 <ul>
                     <li>Helped governed the Inner-Club Council as a board member.</li>
@@ -118,7 +127,7 @@
                     <li>Performed 65 outbound calls a day split between existing and potential new customers.</li>
                 </ul>
             </div>
-        </div>      
+        </div>
 
     </main>
 
