--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,9 @@
     box-sizing: border-box;
 }
 
-/*
-.myNavbar {
-    margin-bottom: -113px;
+.navbar-right {
     padding-top: 15px;
 }
-*/
 
 .navbar-default {
     background-color: transparent;
@@ -33,13 +30,9 @@
     border-left: 2px solid aquamarine;
 }
 
-.navbar-brand {
-    float: none;
-}
-
 .logoImage {
-    height: 60px;
-    width: 60px;
+    height: 120px;
+    width: 120px;
 }
 
 .my-title {
@@ -53,9 +46,7 @@
     text-transform: uppercase;
     color: white;
     font-size: 4em;
-    display: inline-block;
-/*    margin-top: 40vh;*/
-    border-bottom: 3px solid white;
+    display: block;
 }
 
 .transparent {
