new photos, quotes, and more updating of navbar positioning.

--- a/components/aboutMe/aboutMe.html
+++ b/components/aboutMe/aboutMe.html
@@ -53,8 +53,8 @@
 
                 <div class="my-title">
 
-                    <h1 class="quote">"The future belongs to those who believe in the beauty of their dreams."</h1>
-                    <h4 class="subName"><u>-Eleanor Roosevelt</u></h4>
+                    <h1 class="quote">"Be yourself; everyone else is already taken."</h1>
+                    <h4 class="subName"><u>-Oscar Wilde</u></h4>
                 </div>
             </div>
         </div>
