--- a/components/aboutMe/aboutMe.css
+++ b/components/aboutMe/aboutMe.css
@@ -40,7 +40,7 @@
     left: 50%;
     top: 50%;
     transform: translateX(-50%) translateY(-50%);
-    width: 85%;
+    width: 100%;
 }
 
 .quote{
@@ -75,5 +75,5 @@
 }
 
 .darken {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url(IMG_3707.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url(climbingHQ.png);
 }
