--- a/components/contact/contact.html
+++ b/components/contact/contact.html
@@ -6,49 +6,58 @@
     <title>Alex Le Blanc - About Me</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="aboutMe.css">
+    <link rel="stylesheet" href="contact.css">
     <link rel="shortcut icon" href="favicon-32x32-copy.png">
 </head>
 <body>
-  <header>
-        <div class="myNavbar">
-            <nav class="navbar navbar-default">
-                <div class="container-fluid">
-                    <!--Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="/index.html">ADL</a>
-                    </div>
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            <li><a href="../aboutMe/aboutMe.html">About Me</a></li>
-                            <li><a href="../resume/resume.html">Resume</a></li>
-                        </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#">My Projects</a></li>
-                            <li><a href="../contact/contact.html">Contact Me</a></li>
-                        </ul>
-                    </div>
-                    <!-- /.navbar-collapse -->
-                </div>
-                <!-- /.container-fluid -->
-            </nav>
-        </div>
-        <div class="col-xs-12 text-center module darken">
+  <header class="container-fluid">
+        <div class="row">
+            <!--       <a class="navbar-brand text-center" href="index.html"><img src="ADLlogoWhite.png" class="img-responsive logoImage"></a>-->
 
-            <h1 class="quote">"The future belongs to those who believe in the beauty of their dreams."</h1>
-            <h4 class="subName">-Eleanor Roosevelt</h4>
-        </div>
+            <div class="col-xs-12 text-center module darken">
+
+
+                <div class="myNavbar">
+                    <nav class="navbar navbar-default">
+                        <div>
+                            <!--Brand and toggle get grouped for better mobile display -->
+
+
+                            <div class="navbar-header">
+                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </button>
+                                <a class="navbar-brand" href="../../index.html"><img src="ADLlogoWhite-copy.png" class="img-responsive logoImage"></a>
+                            </div>
+
+
+                            <!-- Collect the nav links, forms, and other content for toggling -->
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                <ul class="nav navbar-nav navbar-right">
+                                    <li><a href="../aboutMe/aboutMe.html">About Me</a></li>
+                                    <li><a href="../resume/resume.html">Resume</a></li>
+                                    <li><a href="#">My Projects</a></li>
+                                    <li><a href="../contact/contact.html">Contact Me</a></li>
+                                </ul>
+                            </div>
+                            <!-- /.navbar-collapse -->
+                        </div>
+                        <!-- /.container-fluid -->
+                    </nav>
+                </div>
+
+                <div class="my-title">
+                    <h1 class="quote">"Be yourself; everyone else is already taken."</h1>
+                    <h4 class="subName"><u>-Oscar Wilde</u></h4>
+                </div>
+            </div>
         </div>
     </header>  
     
-    <h1>A little bit more about me...</h1>  
+    <h1>Hit me up!</h1>  
     
     <p></p>
 </body>
