--- a/components/aboutMe/aboutMe.html
+++ b/components/aboutMe/aboutMe.html
@@ -32,7 +32,7 @@
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
                                 </button>
-                                <a class="navbar-brand" href="../../index.html"><img src="ADLlogoWhite-copy.png" class="img-responsive logoImage"></a>
+                                <a class="navbar-brand" href="../../index.html"><img src="ADLlogoWhite.png" onmouseover="this.src='ADLlogoOrangered.png';" onmouseout="this.src='ADLlogoWhite.png';" class="img-responsive logoImage"></a>
                             </div>
 
 
