--- a/components/resume/resume.html
+++ b/components/resume/resume.html
@@ -40,8 +40,8 @@
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav navbar-right">
                                     <li><a href="../aboutMe/aboutMe.html">About Me</a></li>
-                                    <li><a href="../resume/resume.html">Resume</a></li>
-                                    <li><a href="#">My Projects</a></li>
+                                    <li><a href="../resume/resume.html">R&eacute;sum&eacute;</a></li>
+                                    <li><a href="../bookTracker/bookTracker.html">The Book Tracker</a></li>
                                     <li><a href="../contact/contact.html">Contact Me</a></li>
                                 </ul>
                             </div>
@@ -66,26 +66,90 @@
 
         </div>
 
-        <h1 class="text-center"><u>Check out  my previous experience (it's cool, I promise):</u></h1>
+        <h1 class="text-center"><u>Check out  my previous experience (it's maybe, probably relevant, I promise):</u></h1>
+        <div class="row">
 
+        </div>
+        <div class="row greyScale separator">
+            <div class="col-xs-4">
+                <a href="http://www.curo365.com"><img src="curo.jpg" class="img-responsive center-block CuroLogo"></a>
+            </div>
+            <div class="col-xs-8">
+                <h3>Data Migration Lead</h3>
+                <h5>(August 2021 - Present)</h5>
+                <ul>
+                    <li>First dedicated migration engineer for the Curo practice management product</li>
+                    <li>Responsible for entire migration lifecycle, from initial data collection to final go-live migration</li>
+                    <li>Developing new processes and workflows to automate and streamline data migrations</li>
+                    <li>Hiring and training a migration team to scale with the product</li>
+                </ul>
+            </div>
+        </div>
+        <br>
+        <div class="row greyScale separator">
+            <div class="col-xs-4">
+                <a href="http://www.filevine.com"><img src="filevine.jpg" class="img-responsive center-block FilevineLogo"></a>
+            </div>
+            <div class="col-xs-8">
+                <h3>Data Migration Engineering Manager</h3>
+                <h5>(December 2020 - August 2021)</h5>
+                <ul>
+                    <li>Oversaw a team of eight data migration engineers responsible for migrating customers into Filevine's database</li>
+                    <li>Responsible for hiring, training, and supporting my team</li>
+                    <li>Customer escalation resolution</li>
+                </ul>
+                <h3>Senior Data Migration Engineer </h3>
+                <h5>(December 2019 - December 2020)</h5>
+                <ul>
+                    <li>Complex, enterprise client projects</li>
+                    <li>Discovery and mapping of client legacy data, often from multiple sources that did not communicate</li>
+                    <li>Transformating data (via complicated joins, subqueries, etc) into Filevine's standard import schema</li>
+                    <li>Maintainence and upkeep of a library of stored procs designed to reduce repetitive workload</li>
+                    <li>Project oversight and timeline management, responsible for delivery within time alloted by customer's sales agreement</li>
+                </ul>
+                <h3>Data Migration Engineering</h3>
+                <h5>(July 2018 - November 2019)</h5>
+                <ul>
+                    <li>Initial discovery of client's legacy data</li>
+                    <li>Mapping data from legacy to destination</li>
+                    <li>SQL scripting of legacy databases into Filevine' import schema</li>
+                </ul>
+                <h3>Data Migration Project Manager</h3>
+                <h5>(April 2018 - July 2018)</h5>
+                <ul>
+                    <li>Responsible for project kick-off and project scoping for sales department</li>
+                    <li>Managing client databases and uploading them
+                    <li>Monitoring timeline to ensure timely project delivery</li>
+                </ul>
+                <h3>Implementation Consultant</h3>
+                <h5>(October 2017 - April 2018)</h5>
+                <ul>
+                    <li>Guiding SMB/MM law firms through their transition to Filevine</li>
+                    <li>Manage entire on-boarding process to ensure a successful launch with each new firm</li>
+                    <li>Provided customer support, resolved implementation roadblocks, oversaw firm-wide training and system setup</li>
+                    <li>Responsible for 25-50 law firm implementations at any given time</li>
+                </ul>
+            </div>
+        </div>
+        <br>
         <div class="row greyScale separator">
             <div class="col-xs-4">
                 <a href="http://www.backcountry.com"><img src="backcountryLogo.png" class="img-responsive center-block BCCompanyLogo"></a>
             </div>
             <div class="col-xs-8">
-                <h3>Inbound Chat Gearhead</h3>
-                <h5>(Oct 2015 - Apr 2016)</h5>
-                <ul>
-                    <li>Answered inbound chat inquiries from customers.</li>
-                    <li>Provided customer support, resolved problems, answered questions.</li>
-                    <li>Facilitated sales of outdoor gear.</li>
-                </ul>
                 <h3>Customer Account Manager </h3>
-                <h5>(Apr 2016 - Dec 2016)</h5>
+                <h5>(April 2016 - January 2017)</h5>
                 <ul>
                     <li>Sales</li>
                     <li>Managed a client book of 2,000 customers and provided each with personalized service.</li>
                     <li>Performed 65 outbound calls a day split between existing and potential new customers.</li>
+                </ul>
+                <h3>Inbound Chat Gearhead</h3>
+                <h5>(October 2015 - April 2016)</h5>
+                <ul>
+                    <li>Answered inbound chat inquiries from customers.</li>
+                    <li>Provided customer support, resolved problems, answered questions.</li>
+                    <li>Facilitated sales of outdoor gear.</li>
                 </ul>
             </div>
         </div>
@@ -96,7 +160,7 @@
             </div>
             <div class="col-xs-8">
                 <h3>Front Desk Employee</h3>
-                <h5>(Apr 2015 - Oct 2016)</h5>
+                <h5>(April 2015 - October 2015)</h5>
                 <ul>
                     <li>Customer service: answered questions, phones, toured the gym to new customers.</li>
                     <li>Sales: sold memberships once customers had the chance to experience our service.</li>
@@ -107,11 +171,11 @@
         <br>
         <div class="row greyScale separator">
             <div class="col-xs-4">
-                <a href="http://www.westminstercollege.edu"><img src="westminsterLogo.png" class="img-responsive center-block WCCompanyLogo"></a>
+                <a href="http://www.westminstercollege.edu"><img src="westminster.jpg" class="img-responsive center-block WCCompanyLogo"></a>
             </div>
             <div class="col-xs-8">
-                <h3>Head Routesetter (Outdoor Recreation)</h3>
-                <h5>(August 2014 - Apr 2016)</h5>
+                <h3>Head Routesetter - Outdoor Recreation Dept</h3>
+                <h5>(August 2014 - May 2016)</h5>
                 <ul>
                     <li>Oversaw routesetting proceedures for Bishop Climbing Wall.</li>
                     <li>Set, graded, and maintained climbs currently at the wall. Wall maintenance.</li>
@@ -119,7 +183,7 @@
                     <li>Helped plan and execute bi-annual climbing comps.</li>
                 </ul>
                 <h3>ICC Board Member and Club President</h3>
-                <h5>(Jan 2015 - Dec 2015)</h5>
+                <h5>(January 2015 - December 2015)</h5>
                 <ul>
                     <li>Helped governed the Inner-Club Council as a board member.</li>
                     <li>President of Climbing Club and Ultimate Frisbee Club: 150 and 30 members respectively.</li>
