--- a/components/resume/resume.html
+++ b/components/resume/resume.html
@@ -66,13 +66,14 @@
 
         </div>
 
-        <h1 class="text-center"><u>Check out  my previous experience (it's maybe, probably relevant, I promise):</u></h1>
+        <h1 class="text-center"><u>Check out  my previous experience (it's relevant, I promise):</u></h1>
         <div class="row">
 
         </div>
+        <br>
         <div class="row greyScale separator">
             <div class="col-xs-4">
-                <a href="http://www.curo365.com"><img src="curo.jpg" class="img-responsive center-block CuroLogo"></a>
+                <a href="http://www.curo365.com"><img src="curo.jpg" class="img-responsive center-block curoLogo"></a>
             </div>
             <div class="col-xs-8">
                 <h3>Data Migration Lead</h3>
@@ -140,16 +141,16 @@
                 <h3>Customer Account Manager </h3>
                 <h5>(April 2016 - January 2017)</h5>
                 <ul>
-                    <li>Sales</li>
-                    <li>Managed a client book of 2,000 customers and provided each with personalized service.</li>
-                    <li>Performed 65 outbound calls a day split between existing and potential new customers.</li>
+                    <li>Outdoor gear sales specializing in climbing, biking, skiing, and camping</li>
+                    <li>Managed a client book of 2,000 customers and provided each with personalized service</li>
+                    <li>Performed 65 outbound calls a day split between existing and potential new customers</li>
                 </ul>
                 <h3>Inbound Chat Gearhead</h3>
                 <h5>(October 2015 - April 2016)</h5>
                 <ul>
-                    <li>Answered inbound chat inquiries from customers.</li>
-                    <li>Provided customer support, resolved problems, answered questions.</li>
-                    <li>Facilitated sales of outdoor gear.</li>
+                    <li>Answered inbound chat inquiries from customers</li>
+                    <li>Provided customer support, resolved problems, answered questions</li>
+                    <li>Facilitated sales of outdoor gear</li>
                 </ul>
             </div>
         </div>
@@ -162,9 +163,9 @@
                 <h3>Front Desk Employee</h3>
                 <h5>(April 2015 - October 2015)</h5>
                 <ul>
-                    <li>Customer service: answered questions, phones, toured the gym to new customers.</li>
-                    <li>Sales: sold memberships once customers had the chance to experience our service.</li>
-                    <li>Monitored the floor for safety issues and taught lessons on belaying/climbing.</li>
+                    <li>Customer service: answered questions, phones, toured the gym to new customers</li>
+                    <li>Sales: sold memberships once customers had the chance to experience our service</li>
+                    <li>Monitored the floor for safety issues and taught lessons on belaying/climbing</li>
                 </ul>
             </div>
         </div>
@@ -177,18 +178,18 @@
                 <h3>Head Routesetter - Outdoor Recreation Dept</h3>
                 <h5>(August 2014 - May 2016)</h5>
                 <ul>
-                    <li>Oversaw routesetting proceedures for Bishop Climbing Wall.</li>
-                    <li>Set, graded, and maintained climbs currently at the wall. Wall maintenance.</li>
-                    <li>Oversaw other setters and organized guest setters.</li>
-                    <li>Helped plan and execute bi-annual climbing comps.</li>
+                    <li>Oversaw routesetting proceedures for Bishop Climbing Wall</li>
+                    <li>Set, graded, and maintained climbs currently at the wall</li>
+                    <li>Ongoing wall maintenance</li>
+                    <li>Oversaw other route setters and organized guest setters</li>
+                    <li>Helped plan and execute bi-annual climbing comps</li>
                 </ul>
                 <h3>ICC Board Member and Club President</h3>
                 <h5>(January 2015 - December 2015)</h5>
                 <ul>
-                    <li>Helped governed the Inner-Club Council as a board member.</li>
-                    <li>President of Climbing Club and Ultimate Frisbee Club: 150 and 30 members respectively.</li>
-                    <li>Managed a budget for two separate campus organizations.</li>
-                    <li>Performed 65 outbound calls a day split between existing and potential new customers.</li>
+                    <li>Helped governed the Inner-Club Council as a board member</li>
+                    <li>President of Climbing Club and Ultimate Frisbee Club: 150 and 30 members respectively</li>
+                    <li>Managed a budget for two separate campus organizations</li>
                 </ul>
             </div>
         </div>
