--- a/components/bookTracker/bookTracker.html
+++ b/components/bookTracker/bookTracker.html
@@ -38,8 +38,8 @@
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav navbar-right">
                                     <li><a href="../aboutMe/aboutMe.html">About Me</a></li>
-                                    <li><a href="../resume/resume.html">Resume</a></li>
-                                    <li><a href="../bookTracker/bookTracker.html">My Projects</a></li>
+                                    <li><a href="../resume/resume.html">R&eacute;sum&eacute;</a></li>
+                                    <li><a href="../bookTracker/bookTracker.html">The Book Tracker</a></li>
                                     <li><a href="../contact/contact.html">Contact Me</a></li>
                                 </ul>
                             </div>
@@ -50,15 +50,19 @@
                 </div>
 
                 <div class="my-title">
-                    <h1 class="quote">"Read a book"</h1>
-                    <h4 class="subName"><u>-Someone</u></h4>
+                    <h1 class="quote">"Books are a uniquely portable magic."</h1>
+                    <h4 class="subName"><u>-Steven King, On Writing</u></h4>
                 </div>
             </div>
         </div>
     </header>  
     
     <h1>The what's what about this page:</h1>  
-    
+    <p>Some notes: Values from 2020 and before are my best guess at remembering when I read a book. I am not including repeats (such as "Harry Potter") or "kid's" books ("Twas the Night Before Christmas," which is arguably not a kid's book, but I digress). On the "Books" sheet you'll find a full list of books and the raw data that drives this dashboard. Lastly I'd like to note that I am not a graphic designer, so please don't judge the colors too harshly. Thanks!	</p>
+    <div class="alexBookReport">
+        <iframe class="responsive-iframe" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRrQkIk-v5OgpzA6QUee39izVSpo6cvajpHLcrDKDMWK9W_MHcKMtugQTK0VSiX_vTapSXTKG8krvSt/pubhtml?widget=true&amp;headers=false">
+        </iframe>
+    </div>
     <p></p>
 </body>
 </html>
