--- a/components/bookTracker/bookTracker.css
+++ b/components/bookTracker/bookTracker.css
@@ -71,6 +71,23 @@
     position: relative;
 }
 
+.alexBookReport {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%;
+}
+
+.responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .darken {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url(payphones.jpeg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url(bookPhoto.jpg);
 }
